fix scrollbar in connection detail view

--- a/style/app.css
+++ b/style/app.css
@@ -357,14 +357,10 @@
   display: inline-block;
 }
 
-.connection-details {
-  margin: 10px 15px 0 15px;
-}
-
 .connection-info {
   background: #76909B;
   color: #fff;
-  margin: -10px -15px 0 -15px;
+  margin: 0;
   padding: 10px 20px;
   height: 90px;
 }
@@ -406,5 +402,5 @@
 .connection-details .connection-journey {
     overflow-y: auto;
     height: 510px;
-    padding-top: 10px;
+    padding: 15px 15px 0 15px;
 }
